# magebot

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  uninstall.sh
src/: auth.rs  config.rs  crypto.rs  daemon.rs  downloader.rs  ipc.rs  logger.rs  main.rs  monitor.rs  setup.rs  watcher.rs
src/tui/: app.rs  connection.rs  event.rs  mod.rs  theme.rs  ui.rs  widgets.rs
src/tui/tabs/: dashboard.rs  download.rs  logs.rs  mod.rs  rules.rs  settings.rs
