[package]
name = "magebot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mega-mage/magebot"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
grammers-client = { version = "0.8", features = ["fs"] }
grammers-session = "0.8"
grammers-mtsender = "0.8"
grammers-tl-types = "0.8"
aes-gcm = "0.10.3"
rand = "0.8.5"
ratatui = "0.26.1"
crossterm = "0.27.0"
cli-clipboard = "0.4"


[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }
